
        - autoflush for commit() wasn't flushing for simple
          subtransactions.

    - Miscellaneous tickets: [ticket:940] [ticket:964]

- general
    - Fixed a variety of hidden and some not-so-hidden
      compatibility issues for Python 2.3, thanks to new
      support for running the full test suite on 2.3.

    - Warnings are now issued as type exceptions.SAWarning.

- dialects
    - Auto-detect an unspecified MySQL ANSI_QUOTES mode during
      reflection operations, support for changing the mode
      midstream.  Manual mode setting is still required if no
      reflection is used.

    - Finally added PGMacAddr type to postgres [ticket:580]

    - Reflect the sequence associated to a PK field (typically
      with a BEFORE INSERT trigger) under Firebird

    - Oracle assembles the correct columns in the result set
      column mapping when generating a LIMIT/OFFSET subquery,
      allows columns to map properly to result sets even if
      long-name truncation kicks in [ticket:941]

- ext
    - Changed ext.activemapper to use a non-transactional
      session for the objectstore.

    - Fixed output order of "['a'] + obj.proxied" binary
      operation on association-proxied lists.

0.4.2p3
------
- general
    - sub version numbering scheme changed to suite
      setuptools version number rules; easy_install -u
      should now get this version over 0.4.2.

- sql
    - Text type is properly exported now and does not
      raise a warning on DDL create; String types with no
      length only raise warnings during CREATE TABLE
      [ticket:912]

    - new UnicodeText type is added, to specify an
      encoded, unlengthed Text type

    - fixed bug in union() so that select() statements
      which don't derive from FromClause objects can be
      unioned

- orm
    - fixed bug with session.dirty when using "mutable
      scalars" (such as PickleTypes)

    - added a more descriptive error message when flushing